- Process ID information in the logs for some daemons
- Removed unused configuration parameters (#767)
- Refactoring of the code base (#1058)
- FAQ entry: Active directory integration in registration network
- Captive Portal minor usability improvements
- Reorganized default violation classes to be more coherent and self-documented

Bug Fixes
- Fixed OS id not visible when dhcp-fingerprint view is filtered (#1180)
- Fixed rare case of Web Admin user account corruption causing homepage to 
  become status/dashboard instead of status/dashboard.php (#1196)
- Warning avoidance in Extreme Network modules
- installer and configurator scripts no longer output passwords on the terminal
  (#1021)
- Fixed warnings and improved error reporting in our FreeRADIUS module (#1176)

--------------------------------------------------------------------------------
Version <release> - <codename> released on <releaseDate>

New Hardware Support
- Motorola RF Switches (Wireless Controllers)
- 3Com Switches 4200G, E4800G and E5500G now supports MAC Authentication and 
  802.1X
- Dlink DGS 3100 Switches

New Features
- User-Agent violation support completely re-written. It is now easier than 
  ever to block devices or old browsers from your network. (#769, #1192)
- Administrators can now modify and preview remediation pages from the Web Admin
- Kerberos Authentication on the Captive Portal (Thanks to Brad Lhotsky from 
  NIH)

Enhancements
- 3Com Super Stack 4500 now uses SNMP for MAC authorization (port-security)
- DHCP fingerprints sharing now allows submitter to send computer name, user-
  agent and a contact email to help us identify the devices better (#983)
- Updated Developer documentation regarding how to support new wireless hardware
- Meru module now supports firmware version identification
- Improvements in the logrotate script (#1198)
- MAC address format xxxx-xxxx-xxxx supported in our FreeRADIUS' module
- New DHCP fingerprint for Cisco SPA series IP Phone, Mikrotik, Freebox,